--- a/theme/common.blocks/event-details/__content/_event-details__content.scss
+++ b/theme/common.blocks/event-details/__content/_event-details__content.scss
@@ -1,4 +1,3 @@
 .event-details__content {
     padding: 40px;
-    background-color: rgba(253, 187, 69, .2);
 }
