--- a/theme/common.blocks/event-details/__date/_event-details__date.scss
+++ b/theme/common.blocks/event-details/__date/_event-details__date.scss
@@ -1,5 +1,4 @@
 .event-details__date {
-  color: $yellow;
   font-size: 21px;
   margin-bottom: 10px;
   @include bold;
