--- a/theme/common.blocks/event-details/__name/__text/_event-details__event__text.scss
+++ b/theme/common.blocks/event-details/__name/__text/_event-details__event__text.scss
@@ -1,5 +1,4 @@
 .event-details__event__text {
   font-size: 18px;
-  color: $yellow;
   margin-bottom: 30px;
 }
