--- a/theme/common.blocks/event-details/__name/_event-details__name.scss
+++ b/theme/common.blocks/event-details/__name/_event-details__name.scss
@@ -1,5 +1,4 @@
 .event-details__name {
-    color: $yellow;
     font-size: 24px;
     margin-bottom: 4px;
     @include bold;
