--- a/theme/common.blocks/event-details/__notes/__text/event-details__notes__text.scss
+++ b/theme/common.blocks/event-details/__notes/__text/event-details__notes__text.scss
@@ -1,6 +1,5 @@
 .event-details__notes__text {
   font-size: 24px;
-  color: $yellow;
   margin-bottom: 10px;
   @include bold;
 }
