--- a/theme/common.blocks/event-details/__notes/_event-details__notes.scss
+++ b/theme/common.blocks/event-details/__notes/_event-details__notes.scss
@@ -1,5 +1,4 @@
 .event-details__notes {
   font-size: 18px;
-  color: $yellow;
   margin-bottom: 60px;
 }
