--- a/theme/common.blocks/event-details/__topic/_event-details__topic.scss
+++ b/theme/common.blocks/event-details/__topic/_event-details__topic.scss
@@ -1,5 +1,4 @@
 .event-details__topic {
   font-size: 18px;
-  color: $yellow;
   margin-bottom: 40px;
 }
